Se actualizo el codigo en la actuaizacion de datos para que la fecha se actualice.

--- a/src/mooks/tasks.json
+++ b/src/mooks/tasks.json
@@ -1,1 +1,23 @@
-[{"id":"87bfcdcb-c539-4453-a89b-220baefc9356","description":"Me comi una salchipapa!!","status":"no-done","createdAt":"17:13:19 GMT-0500 (hora de Ecuador)","updatedAt":"17:13:19 GMT-0500 (hora de Ecuador)"},{"id":"b6ce0466-3b63-410c-bdb6-109d6513e633","description":"Estoy haciendo un CLI con NodeJS","status":"in-progress","createdAt":"17:14:45 GMT-0500 (hora de Ecuador)","updatedAt":"17:14:45 GMT-0500 (hora de Ecuador)"},{"id":"7d69e8ea-20f5-403d-b21d-6b1f6cfd50c7","description":"Esta es otra tarea realizada con Command","status":"in-progress","createdAt":"17:15:58 GMT-0500 (hora de Ecuador)","updatedAt":"17:15:58 GMT-0500 (hora de Ecuador)"}]
+[
+    {
+        "id": "87bfcdcb-c539-4453-a89b-220baefc9356",
+        "description": "Me comi otra salchipapa!",
+        "status": "no-done",
+        "createdAt": "17:13:19 GMT-0500 (hora de Ecuador)",
+        "updatedAt": "17:56:13 GMT-0500 (hora de Ecuador)"
+    },
+    {
+        "id": "b6ce0466-3b63-410c-bdb6-109d6513e633",
+        "description": "Estoy haciendo un CLI con NodeJS",
+        "status": "in-progress",
+        "createdAt": "17:14:45 GMT-0500 (hora de Ecuador)",
+        "updatedAt": "17:14:45 GMT-0500 (hora de Ecuador)"
+    },
+    {
+        "id": "7d69e8ea-20f5-403d-b21d-6b1f6cfd50c7",
+        "description": "Esta es otra tarea realizada con Command",
+        "status": "in-progress",
+        "createdAt": "17:15:58 GMT-0500 (hora de Ecuador)",
+        "updatedAt": "17:15:58 GMT-0500 (hora de Ecuador)"
+    }
+]
